fix: regressions from spacing updates

--- a/components/navigatie sidenav/bem.scss
+++ b/components/navigatie sidenav/bem.scss
@@ -72,7 +72,7 @@
   padding-block-end: var(--utrecht-space-block-xs);
   padding-block-start: var(--utrecht-space-block-xs);
   padding-inline-end: var(--utrecht-space-inline-3xs);
-  padding-inline-start: var(--utrecht-space-inline-lg);
+  padding-inline-start: var(--utrecht-space-inline-xl);
   text-decoration: none;
 }
 
@@ -85,7 +85,7 @@
   padding-block-end: var(--utrecht-space-block-2xs);
   padding-block-start: var(--utrecht-space-block-2xs);
   padding-inline-end: var(--utrecht-space-inline-3xs);
-  padding-inline-start: var(--utrecht-space-inline-lg);
+  padding-inline-start: var(--utrecht-space-inline-xl);
   text-decoration: none;
 }
 
