--- a/components/templates/contact-card-template/bem.scss
+++ b/components/templates/contact-card-template/bem.scss
@@ -27,10 +27,10 @@
   background-position-x: 66%;
   background-size: 200%;
   color: var(--utrecht-color-black);
-  padding-block-end: var(--utrecht-space-block-lg);
-  padding-block-start: var(--utrecht-space-block-lg);
-  padding-inline-end: var(--utrecht-space-inline-lg);
-  padding-inline-start: var(--utrecht-space-inline-lg);
+  padding-block-end: var(--utrecht-space-block-xl);
+  padding-block-start: var(--utrecht-space-block-xl);
+  padding-inline-end: var(--utrecht-space-inline-xl);
+  padding-inline-start: var(--utrecht-space-inline-xl);
 }
 
 .utrecht-contact-card__content {
